src/components/BottomButtonWrapper/BottomButtonWrapper.module.css
.absoluteBottom {
    position: fixed;
    width: 100%;
    left: 0;
    bottom: 0;
    z-index: 15;
    background-color: #fff;
    padding: 8px 0 25px;
    border-top-right-radius: 24px;
    border-top-left-radius: 24px;
    box-shadow: 3px 0 10px #938e8e;
}

.absoluteBottom_wrapper {
    display: flex;
    padding: 0 15px;
}

.redButton {
    cursor: pointer;
    display: flex;
    padding: 15px 0;
    background-color: var(--red);
    border-radius: 15px;
    width: 100%;
    justify-content: center;
    align-items: center;

    .text {
        font-family: 'Mont', sans-serif;
        font-weight: 700;
        font-size: 16px;
        color: var(--primary-background);
    }

    &.loadingButton {
        pointer-events: none;

        .text {
            opacity: 0;
        }

        /*&::after {*/
        /*    content: "";*/
        /*    position: absolute;*/
        /*    width: 1em;*/
        /*    height: 1em;*/
        /*    border: 2px solid #fff;*/
        /*    border-top: 2px solid transparent; !* Прозрачная часть для анимации *!*/
        /*    border-radius: 50%;*/
        /*    animation: spin 0.6s linear infinite;*/
        /*}*/
    }
}

